fix aboutToFinish thresh calculation

for continuous streams we get a length of 0, so we need to exclude <= 0
from delta calculation, otherwise aboutToFinish gets immediately emitted
for streams triggering a bogus source change in a consumer

BUG: 305021